--- a/playground/package.json
+++ b/playground/package.json
@@ -1,15 +1,7 @@
 {
   "name": "playground",
   "version": "1.0.0",
-  "description": "",
-  "author": "",
-  "license": "ISC",
-  "keywords": [],
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "devDependencies": {
-    "ts-bundle-template": "workspace:^"
+    "unsearch": "workspace:^"
   }
 }
